--- a/SignatureMVC/SignatureMVC.csproj
+++ b/SignatureMVC/SignatureMVC.csproj
@@ -869,6 +869,8 @@
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="App_Data\Bericht.pdf" />
+    <None Include="Properties\PublishProfiles\SignatureMVC - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
